--- a/src/views/components/processing-dialog.ejs
+++ b/src/views/components/processing-dialog.ejs
@@ -1,7 +1,7 @@
 <!-- The dialog box to show that something is being done. -->
 <div
   id="processing-dialog"
-  class="fixed inset-0 hidden size-full items-center justify-center bg-black/50 p-6"
+  class="fixed inset-0 z-50 hidden size-full items-center justify-center bg-black/50 p-6"
 >
   <dialog class="flex bg-white p-6 shadow-md">
     <h2 class="text-xl font-semibold">Processing...</h2>
