--- a/src/views/components/error-dialog.ejs
+++ b/src/views/components/error-dialog.ejs
@@ -1,7 +1,7 @@
 <!-- The dialog box to show that something has gone wrong -->
 <div
   id="error-dialog"
-  class="fixed inset-0 hidden size-full items-center justify-center bg-black/50 p-6"
+  class="fixed inset-0 z-50 hidden size-full items-center justify-center bg-black/50 p-6"
 >
   <dialog class="flex flex-col gap-4 bg-white p-6 text-center shadow-md">
     <h2 class="text-xl font-semibold text-red-600">Uh oh!</h2>
