--- a/src/views/pages/admin-posts.ejs
+++ b/src/views/pages/admin-posts.ejs
@@ -1,98 +1,428 @@
-<div class="container mx-auto p-4">
-  <h1 class="mb-6 text-center text-4xl font-bold">adminPosts List</h1>
+<div class="container mx-auto my-4 flex max-w-screen-lg flex-col gap-4 p-4">
+  <a href="/admin" class="my-4 text-sky-500 hover:underline"
+    >Back to Admin Tools</a
+  >
 
-  <!-- adminPosts Container -->
-  <div id="adminPosts-container" class="grid grid-cols-1 gap-8 lg:grid-cols-4">
-    <!-- Bài viết sẽ được render ở đây -->
+  <%- include('../components/error-dialog.ejs') %> <%-
+  include('../components/processing-dialog.ejs') %>
 
-    <% if (typeof adminPosts == "undefined" || !adminPosts || adminPosts.length
-    == 0) { %>
-    <p class="text-center text-gray-500 lg:row-span-4">
-      No adminPosts available.
-    </p>
-    <% } else { adminPosts.forEach(adminPosts => { %>
-    <div class="relative mb-6 rounded-lg bg-white p-6 shadow-md">
-      <% if (adminPosts.state == "draft") { %>
-      <div>
-        <div
-          class="absolute -right-4 -top-4 rounded-md bg-orange-300 px-4 py-2 font-semibold"
-        >
-          Draft
-        </div>
-      </div>
-      <% } else if (adminPosts.state == "denied") { %>
-      <div>
+  <h1 class="mb-6 text-center text-4xl font-bold">All posts</h1>
+
+  <a
+    href="/post"
+    class="w-fit self-end rounded bg-green-600 px-4 py-2 font-semibold text-white"
+  >
+    Create New Post
+  </a>
+
+  <!-- Delete confirmation dialog -->
+  <div
+    class="fixed inset-0 z-50 hidden size-full items-center justify-center bg-black/50 p-6"
+    id="delete-dialog"
+  >
+    <div
+      class="flex w-full max-w-screen-sm flex-col gap-4 rounded-xl bg-white p-6 shadow-md"
+    >
+      <h2 class="text-lg font-bold text-red-600">
+        Are you sure you want to delete this post?
+      </h2>
+
+      <p class="break-words">
+        Just to reiterate, this post is called
+        <span class="italic" id="delete-name"></span>.
+      </p>
+
+      <div
+        class="flex flex-row items-center justify-end gap-2 font-semibold text-white"
+      >
         <button
-          type="submit"
-          class="mb-6 rounded-md bg-green-500 px-6 py-2 text-white transition duration-200 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2"
+          class="rounded bg-red-600 px-4 py-2"
+          onclick="closeDeleteDialog()"
         >
+          Nevermind
+        </button>
+        <button class="rounded bg-sky-600 px-4 py-2" onclick="deletePost()">
+          Yes, Delete
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Script for handling the deletion dialog -->
+  <script defer>
+    let deletingId;
+
+    function openDeleteDialog(id, name) {
+      deletingId = id;
+      const el = document.getElementById("delete-dialog");
+      el.classList.replace("hidden", "flex");
+
+      const nameField = document.getElementById("delete-name");
+      nameField.textContent = name;
+    }
+
+    function closeDeleteDialog() {
+      const el = document.getElementById("delete-dialog");
+      el.classList.replace("flex", "hidden");
+    }
+
+    async function deletePost() {
+      closeDeleteDialog();
+      openProcessingDialog();
+      const res = await fetch("/admin/posts", {
+        method: "DELETE",
+        body: JSON.stringify({ id: deletingId }),
+        credentials: "include",
+        headers: { "Content-Type": "application/json" },
+      });
+      closeProcessingDialog();
+      window.location.reload();
+    }
+  </script>
+
+  <!-- Dialog for handling denying case -->
+  <div
+    class="fixed inset-0 z-50 hidden size-full items-center justify-center bg-black/50 p-6"
+    id="deny-dialog"
+  >
+    <div
+      class="flex w-full max-w-screen-sm flex-col gap-4 rounded-xl bg-white p-6 shadow-md"
+    >
+      <h2 class="text-lg font-bold">Denying Post</h2>
+
+      <label class="flex flex-col gap-2 break-words">
+        <p class="break-words">
+          For what reason, are you denying <em id="deny-name"></em> for?
+        </p>
+
+        <input
+          type="text"
+          class="flex h-12 items-center rounded-md border-[1px] border-black px-4 placeholder:text-black/25"
+          id="deny-field"
+          placeholder="The post sucks"
+        />
+      </label>
+
+      <div
+        class="flex flex-row items-center justify-end gap-2 font-semibold text-white"
+      >
+        <button
+          class="rounded bg-red-600 px-4 py-2"
+          onclick="closeDenyDialog()"
+        >
+          Nevermind
+        </button>
+        <button class="rounded bg-sky-600 px-4 py-2" onclick="denyPost()">
+          Deny
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Script for handling denial -->
+  <script defer>
+    let denyingId;
+
+    function openDenyDialog(id, name) {
+      denyingId = id;
+      const el = document.getElementById("deny-dialog");
+      el.classList.replace("hidden", "flex");
+      document.getElementById("deny-name").textContent = name;
+    }
+
+    function closeDenyDialog() {
+      const el = document.getElementById("deny-dialog");
+      el.classList.replace("flex", "hidden");
+    }
+
+    async function denyPost() {
+      closeDenyDialog();
+      openProcessingDialog();
+      const res = await fetch("/admin/posts", {
+        method: "PUT",
+        body: JSON.stringify({
+          id: denyingId,
+          state: "denied",
+          deniedReason:
+            document.getElementById("deny-field").value.trim() || "No reason",
+        }),
+        credentials: "include",
+        headers: { "Content-Type": "application/json" },
+      });
+      closeProcessingDialog();
+
+      switch (res.status) {
+        case 400:
+          openErrorDialog("Something wrong has happened...");
+          break;
+        case 200:
+          window.location.reload();
+          break;
+      }
+    }
+  </script>
+
+  <!-- Script for handling unpublishing to draft. -->
+  <script defer>
+    async function unpublishPost(id) {
+      openProcessingDialog();
+      const res = await fetch("/admin/posts", {
+        method: "PUT",
+        body: JSON.stringify({
+          id,
+          state: "approved",
+        }),
+        credentials: "include",
+        headers: { "Content-Type": "application/json" },
+      });
+      closeProcessingDialog();
+      window.location.reload();
+    }
+  </script>
+
+  <!-- Publishing dialog for marking the date -->
+  <div
+    class="fixed inset-0 z-50 hidden size-full items-center justify-center bg-black/50 p-6"
+    id="publish-dialog"
+  >
+    <div
+      class="flex w-full max-w-screen-sm flex-col gap-4 rounded-xl bg-white p-6 shadow-md"
+    >
+      <h2 class="text-lg font-bold">Publishing Post</h2>
+
+      <label class="flex flex-col gap-2">
+        <p class="break-words">
+          When would you like for <em id="publish-name"></em> to go public?
+        </p>
+
+        <input
+          type="date"
+          id="publish-field"
+          class="flex h-12 items-center rounded-md border-[1px] border-black px-4 placeholder:text-black/25"
+        />
+      </label>
+
+      <div
+        class="flex flex-row items-center justify-end gap-2 font-semibold text-white"
+      >
+        <button
+          class="rounded bg-red-600 px-4 py-2"
+          onclick="closePublishDialog()"
+        >
+          Nevermind
+        </button>
+        <button class="rounded bg-sky-600 px-4 py-2" onclick="publishPost()">
           Publish
         </button>
-        <div
-          class="absolute -right-4 -top-4 rounded-md bg-red-700 px-4 py-2 font-semibold text-white"
-        >
-          Denied
-        </div>
       </div>
-      <% } else if (adminPosts.state == "approved") { %>
+    </div>
+  </div>
+
+  <script defer>
+    let publishingId;
+
+    function openPublishDialog(id, name) {
+      publishingId = id;
+      const el = document.getElementById("publish-dialog");
+      el.classList.replace("hidden", "flex");
+      document.getElementById("publish-name").textContent = name;
+    }
+
+    function closePublishDialog() {
+      const el = document.getElementById("publish-dialog");
+      el.classList.replace("flex", "hidden");
+    }
+
+    async function publishPost() {
+      closePublishDialog();
+      openProcessingDialog();
+      const res = await fetch("/admin/posts", {
+        method: "PUT",
+        body: JSON.stringify({
+          id: publishingId,
+          state: "published",
+          publishedDate: document.getElementById("publish-field").value,
+        }),
+        credentials: "include",
+        headers: { "Content-Type": "application/json" },
+      });
+      closeProcessingDialog();
+
+      switch (res.status) {
+        case 404:
+          openErrorDialog("That post can not be found");
+          break;
+        case 400:
+          openErrorDialog("There was something wrong with the request");
+          break;
+        case 200:
+          window.location.reload();
+          break;
+      }
+    }
+  </script>
+
+  <!-- adminPosts Container -->
+  <div class="mx-auto grid w-full grid-cols-1 gap-8 lg:grid-cols-3">
+    <% if (typeof adminPosts == "undefined" || !adminPosts || adminPosts.length
+    == 0) { %>
+    <p class="w-full text-center text-gray-500 lg:col-span-3">
+      No posts available.
+    </p>
+    <% } else { adminPosts.forEach(post => { %>
+    <div
+      class="relative flex flex-col justify-between gap-2 rounded-lg bg-white p-6 shadow-md"
+    >
+      <% if (post.state == "draft") { %>
       <div
-        class="absolute -right-4 -top-4 rounded-md bg-sky-600 px-4 py-2 font-semibold text-white"
+        class="absolute right-4 top-4 rounded-md bg-orange-300 px-4 py-2 font-semibold"
+      >
+        Draft
+      </div>
+      <% } else if (post.state == "denied") { %>
+      <div
+        class="absolute right-4 top-4 rounded-md bg-red-700 px-4 py-2 font-semibold text-white"
+      >
+        Denied
+      </div>
+      <% } else if (post.state == "approved") { %>
+      <div
+        class="absolute right-4 top-4 rounded-md bg-sky-600 px-4 py-2 font-semibold text-white"
       >
         Approved
       </div>
       <% } else { %>
-      <div>
-        <button
-          type="submit"
-          class="mb-6 rounded-md bg-red-500 px-6 py-2 text-white transition duration-200 hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
-        >
-          Unpublish
-        </button>
-        <div
-          class="absolute -right-4 -top-4 rounded-md bg-gradient-to-r from-purple-500 to-green-600 px-4 py-2 font-semibold text-white"
-        >
-          Published
-        </div>
-      </div>
-      <% } %>
-
-      <img
-        src="<%= adminPosts.thumbnail.small %>"
-        alt="<%= adminPosts.name %>"
-        class="mb-4 h-48 w-full rounded-t-lg object-cover"
-      />
-      <a
-        href="/edit/<%= adminPosts._id %>"
-        class="text-blue-600 hover:underline"
+      <div
+        class="absolute right-4 top-4 rounded-md bg-gradient-to-r from-purple-500 to-green-600 px-4 py-2 font-semibold text-white"
       >
-        <h3 class="text-xl font-semibold"><%= adminPosts.name %></h3>
-      </a>
-
-      <p class="mb-2 text-gray-600"><%= adminPosts.abstract %></p>
-      <div>
-        <div>
-          <p class="text-sm text-gray-700">
-            <strong>Category:</strong> <%= adminPosts.category.name %>
-          </p>
-          <p class="flex flex-row flex-wrap gap-1 text-sm text-gray-700">
-            <strong>Tags:</strong>
-            <% adminPosts.tags.forEach(tag => { %>
-            <span class="text-blue-500"><%= tag.tag %></span>
-            <% }) %>
-          </p>
-          <p class="text-sm text-gray-700">
-            <strong>Premium:</strong> <%= adminPosts.premium ? "Yes" : "No" %>
-          </p>
-        </div>
+        Published
       </div>
-
-      <% if (adminPosts.state == "denied" && adminPosts.deniedReason) { %>
-      <p class="text-red-700">
-        <strong>Denied Reason</strong>: <%= adminPosts.deniedReason %>
-      </p>
       <% } %>
 
-      <p></p>
+      <div class="flex flex-col gap-2">
+        <img
+          src="<%= post.thumbnail.small %>"
+          alt="<%= post.name %>"
+          class="mb-4 h-48 w-full rounded-t-lg object-cover"
+        />
+        <a href="/edit/<%= post._id %>" class="text-blue-600 hover:underline">
+          <h3 class="text-xl font-semibold"><%= post.name %></h3>
+        </a>
+
+        <p class="mb-2 text-gray-600"><%= post.abstract %></p>
+        <p class="text-sm text-gray-700">
+          <strong>Category:</strong> <%= post.category.name %>
+        </p>
+
+        <p class="flex flex-row flex-wrap gap-1 text-sm text-gray-700">
+          <strong>Tags:</strong>
+
+          <% if(post.tags && post.tags.length > 0) { post.tags.forEach(tag => {
+          %>
+          <span class="text-blue-500">#<%= tag.tag %></span>
+          <% })} else { %>
+          <span class="text-red-400">None.</span>
+          <% } %>
+        </p>
+        <p class="text-sm text-gray-700">
+          <strong>Premium:</strong> <%= post.premium ? "Yes" : "No" %>
+        </p>
+
+        <% if (post.state == "denied" && post.deniedReason) { %>
+        <p class="text-red-700">
+          <strong>Denied Reason</strong>: <%= post.deniedReason %>
+        </p>
+        <% } %>
+      </div>
+
+      <div class="flex w-full flex-row items-center justify-center gap-1">
+        <a
+          href="/edit/<%= post._id %>"
+          aria-label="Edit"
+          title="Edit"
+          class="rounded-full p-2 duration-200 hover:bg-zinc-200"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            class="size-6"
+          >
+            <path
+              d="M206.22-206.78h57.56l352.57-352.57-56.44-57-353.69 353.7v55.87Zm-52.44 106q-22.08 0-37.54-15.46t-15.46-37.54v-109.44q0-21.08 7.98-40.39 7.98-19.3 22.94-34.26l495.95-495.52q13.13-12.7 29.33-19.26 16.19-6.57 33.89-6.57 17.13 0 33.83 6.57 16.69 6.56 29.95 19.69l79.31 78.61q13.13 12.7 19.48 29.68 6.34 16.97 6.34 34.24 0 17.69-6.34 34.17-6.35 16.48-19.48 29.61L339-131.7q-14.96 14.96-34.26 22.94-19.3 7.98-40.39 7.98H153.78Zm593.78-589.65L691-747.56l56.56 57.13ZM587.91-587.91l-28-28.44 56.44 57-28.44-28.56Z"
+            />
+          </svg>
+        </a>
+
+        <% if (post.state != "denied") { %>
+        <button
+          aria-label="Deny"
+          title="Deny"
+          onclick="openDenyDialog('<%= post._id %>', '<%= post.name %>')"
+          class="rounded-full p-2 duration-200 hover:bg-zinc-200"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            class="size-6"
+          >
+            <path
+              d="M333-427h294q22.09 0 37.54-15.46Q680-457.91 680-480t-15.46-37.54Q649.09-533 627-533H333q-22.09 0-37.54 15.46Q280-502.09 280-480t15.46 37.54Q310.91-427 333-427ZM480-60.78q-87.52 0-163.91-32.96-76.38-32.96-132.88-89.47-56.51-56.5-89.47-132.88Q60.78-392.48 60.78-480t32.96-163.91q32.96-76.38 89.47-132.88 56.5-56.51 132.88-89.47 76.39-32.96 163.91-32.96t163.91 32.96q76.38 32.96 132.88 89.47 56.51 56.5 89.47 132.88 32.96 76.39 32.96 163.91t-32.96 163.91q-32.96 76.38-89.47 132.88-56.5 56.51-132.88 89.47Q567.52-60.78 480-60.78Zm0-106q131.74 0 222.48-90.74 90.74-90.74 90.74-222.48t-90.74-222.48Q611.74-793.22 480-793.22t-222.48 90.74Q166.78-611.74 166.78-480t90.74 222.48q90.74 90.74 222.48 90.74ZM480-480Z"
+            />
+          </svg>
+        </button>
+        <% } %> <% if(post.state == "published") { %>
+        <button
+          aria-label="Unpublish"
+          title="Unpublish"
+          class="rounded-full p-2 duration-200 hover:bg-zinc-200"
+          onclick="unpublishPost('<%= post._id %>')"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            class="size-6"
+          >
+            <path
+              d="M480.78-60.78q-87.17 0-163.56-32.91-76.39-32.92-133.22-89.74-56.83-56.83-89.74-133.25Q61.35-393.11 61.35-480q0-65.44 18.13-124.03 18.13-58.58 51.82-108.84L55-789.17q-13.13-13.21-13.13-31.37t13.19-31.29q13.19-13.13 31.33-13.13 18.13 0 31.26 13.13l742.22 742.22Q873-96.48 872.72-78.5q-.28 17.98-13.36 31.11-13.07 13.13-31.04 13.13t-31.1-13.13l-84.35-83.35q-50.41 33.92-108.7 51.94-58.28 18.02-123.39 18.02Zm-39.65-108v-77.44q-32.43 0-55.38-22.94-22.94-22.95-22.94-55.17v-39.06L175.35-550.87q-3 17.44-5.5 34.87-2.5 17.43-2.5 35.12 0 118.87 77.8 208.26 77.81 89.4 195.98 103.84ZM899.22-480q0 38.44-7.18 73.89-7.17 35.46-19.65 68.93-7.56 19.66-27.58 26.7-20.03 7.04-39.4-2.65-19.37-9.7-27.41-29.94-8.04-20.24-1.61-41.45 8.48-23.22 12.65-47.3 4.18-24.08 4.18-49.31 0-95.66-52.81-174.72-52.8-79.06-142.11-113.93v14.87q0 32.3-23.5 55.3t-55.93 23H486v7.39q0 17.63-15.39 23.92-15.39 6.3-27.65-5.96L322.7-772.09q-24.22-24.21-18.46-56.85 5.76-32.63 36.67-45.32 32.54-12.48 67.7-18.72 35.17-6.24 71.96-6.24 86.68 0 162.93 32.91 76.24 32.92 133.07 89.74 56.82 56.83 89.74 133.25 32.91 76.43 32.91 163.32Z"
+            />
+          </svg>
+        </button>
+        <% } %> <% if(post.state != "published") { %>
+        <button
+          aria-label="Publish"
+          title="Publish"
+          class="rounded-full p-2 duration-200 hover:bg-zinc-200"
+          onclick="openPublishDialog('<%= post._id %>', '<%= post.name %>')"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            class="size-6"
+          >
+            <path
+              d="M480.57-60.78q-86.9 0-163.32-32.91-76.42-32.92-133.25-89.74-56.83-56.83-89.74-133.27-32.91-76.44-32.91-163.35t32.91-163.3q32.91-76.39 89.74-133.22 56.83-56.82 133.26-89.74 76.44-32.91 163.35-32.91t163.02 32.91q76.11 32.92 132.94 89.74 56.82 56.83 89.74 133.27 32.91 76.44 32.91 163.35t-32.91 163.3q-32.92 76.39-89.74 133.22-56.83 56.82-133.07 89.74-76.25 32.91-162.93 32.91Zm-39.44-108v-77.44q-32.43 0-55.38-22.94-22.94-22.95-22.94-55.17v-39.06L175.35-550.87q-3 17.44-5.5 34.87-2.5 17.43-2.5 35.12 0 118.87 77.8 208.26 77.81 89.4 195.98 103.84Zm270.35-99.74q20-21.44 35.15-46.37 15.15-24.94 25.65-52.15 10.5-27.22 15.72-55.85 5.22-28.63 5.22-58.24 0-95.66-52.81-174.72-52.8-79.06-142.11-113.93v14.87q0 32.3-23.5 55.3t-55.67 23h-78v78.14q0 16.6-11.5 28.1t-28.1 11.5h-78.14v77.74h235.25q16.66 0 28.16 11.5t11.5 28.08v117.03h38.31q26 0 46.52 15.5 20.53 15.5 28.35 40.5Z"
+            />
+          </svg>
+        </button>
+        <% } %>
+
+        <button
+          aria-label="Delete"
+          title="Delete"
+          onclick="openDeleteDialog('<%= post._id %>', '<%= post.name %>')"
+          class="rounded-full p-2 duration-200 hover:bg-zinc-200"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            class="size-6"
+          >
+            <path
+              d="M273.78-100.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15v-507q-22.09 0-37.54-15.46-15.46-15.46-15.46-37.54 0-22.09 15.46-37.55 15.45-15.45 37.54-15.45H347q0-22.09 15.46-37.55 15.45-15.45 37.54-15.45h158.87q22.09 0 37.54 15.45 15.46 15.46 15.46 37.55h180.35q22.09 0 37.54 15.45 15.46 15.46 15.46 37.55 0 22.08-15.46 37.54-15.45 15.46-37.54 15.46v507q0 44.3-30.85 75.15-30.85 30.85-75.15 30.85H273.78Zm412.44-613H273.78v507h412.44v-507ZM396.61-280.57q19.26 0 32.74-13.47 13.48-13.48 13.48-32.74v-267.57q0-19.26-13.48-32.74t-32.74-13.48q-19.26 0-33.02 13.48-13.76 13.48-13.76 32.74v267.57q0 19.26 13.76 32.74 13.76 13.47 33.02 13.47Zm167.35 0q19.26 0 32.74-13.47 13.47-13.48 13.47-32.74v-267.57q0-19.26-13.47-32.74-13.48-13.48-32.74-13.48t-33.03 13.48q-13.76 13.48-13.76 32.74v267.57q0 19.26 13.76 32.74 13.77 13.47 33.03 13.47ZM273.78-713.78v507-507Z"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
     <% })} %>
   </div>
