--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -7,7 +7,7 @@
       <% homeData.featured.forEach(article=> { %>
       <a href="/post/<%= article.slug %>" class="block">
         <article
-          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg min-h-[350px]"
+          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
         >
           <!-- Article Image -->
           <div class="relative mb-4">
@@ -42,7 +42,7 @@
               Category: <%= article.category.name %>
             </p>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.publishedDate.toLocaleDateString("en-US")
+              Posted Date: <%= article.publishedDate.toLocaleDateString("vi-VN")
               %>
             </p>
           </div>
@@ -55,11 +55,13 @@
   <!-- Most Viewed Articles -->
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Most Viewed Articles</h2>
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4 auto-rows-fr">
+    <div
+      class="grid auto-rows-fr grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4"
+    >
       <% homeData.mostViewed.forEach(article=> { %>
       <a href="/post/<%= article.slug %>" class="block">
         <article
-          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg min-h-[450px]"
+          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
         >
           <!-- Article Image -->
           <div class="relative mb-4">
@@ -94,7 +96,8 @@
               Category: <%= article.category.name %>
             </p>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.publishedDate.toLocaleString("vi-VN") %>
+              Posted Date: <%= article.publishedDate.toLocaleDateString("vi-VN")
+              %>
             </p>
           </div>
 
@@ -112,11 +115,13 @@
   <!-- Latest Articles -->
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Latest Posts</h2>
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4 auto-rows-fr">
+    <div
+      class="grid auto-rows-fr grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4"
+    >
       <% homeData.latest.forEach(article=> { %>
       <a href="/post/<%= article.slug %>" class="block">
         <article
-          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg min-h-[450px]"
+          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
         >
           <!-- Article Image -->
           <div class="relative mb-4">
@@ -151,7 +156,8 @@
               Category: <%= article.category.name %>
             </p>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.publishedDate.toLocaleString("vi-VN") %>
+              Posted Date: <%= article.publishedDate.toLocaleDateString("vi-VN")
+              %>
             </p>
           </div>
         </article>
@@ -164,12 +170,12 @@
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Top 10 Categories</h2>
     <div
-      class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 auto-rows-fr"
+      class="grid auto-rows-fr grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3"
     >
       <% homeData.latestEach.forEach(category=> { %>
       <a href="/post/<%= category.post.slug %>" class="block">
         <article
-          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg min-h-[250px]"
+          class="flex flex-col justify-between bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
         >
           <div class="relative">
             <div class="absolute right-2 top-2">
@@ -200,7 +206,7 @@
               <h4 class="text-lg font-medium"><%= category.post.name %></h4>
               <p class="text-gray-600">
                 Posted Date: <%=
-                category.post.publishedDate.toLocaleString("vi-VN") %>
+                category.post.publishedDate.toLocaleDateString("vi-VN") %>
               </p>
             </div>
           </div>
