--- a/src/views/pages/edit-post.ejs
+++ b/src/views/pages/edit-post.ejs
@@ -106,26 +106,42 @@
       <label
         class="flex h-12 flex-row items-center gap-2 rounded-md border-[1px] border-black p-4 duration-200 hover:bg-sky-300 has-[:checked]:bg-sky-200"
       >
+        <% if (post.premium) { %>
         <input
           type="radio"
           name="postType"
           value="premium"
           class="m-0 size-4 appearance-none rounded-full border-[1px] border-sky-800 p-0 checked:bg-sky-600"
-          checked="<%= post.premium %>"
+          checked
         />
-        Premium
+        <% } else { %>
+        <input
+          type="radio"
+          name="postType"
+          value="premium"
+          class="m-0 size-4 appearance-none rounded-full border-[1px] border-sky-800 p-0 checked:bg-sky-600"
+        />
+        <% } %> Premium
       </label>
       <label
         class="flex h-12 flex-row items-center gap-2 rounded-md border-[1px] border-black p-4 duration-200 hover:bg-sky-300 has-[:checked]:bg-sky-200"
       >
+        <% if (post.premium) { %>
         <input
           type="radio"
           name="postType"
           value="standard"
-          checked="<%= !post.premium %>"
           class="m-0 size-4 appearance-none rounded-full border-[1px] border-sky-800 p-0 checked:bg-sky-600"
         />
-        Standard
+        <% } else { %>
+        <input
+          type="radio"
+          name="postType"
+          value="standard"
+          class="m-0 size-4 appearance-none rounded-full border-[1px] border-sky-800 p-0 checked:bg-sky-600"
+          checked
+        />
+        <% } %> Standard
       </label>
     </fieldset>
 
