--- a/src/views/pages/admin-users.ejs
+++ b/src/views/pages/admin-users.ejs
@@ -549,7 +549,8 @@
       </p>
       <% } else { %>
       <p>Subscription: <em>Expired</em></p>
-      <% } %> <% if (user.requestingSubscription) { %>
+      <% } %> <% if (user.requestingSubscription && (!user.subscription ||
+      user.subscription < Date.now())) { %>
       <p class="text-emerald-600">User is awaiting subscription approval</p>
       <% } %>
     </div>
