--- a/src/views/pages/search.ejs
+++ b/src/views/pages/search.ejs
@@ -14,7 +14,7 @@
       >
         <!-- Featured Image with Article Type Tag -->
         <div class="relative mb-4">
-          <a href="/post/<%= article._id %>">
+          <a href="/post/<%= article.slug %>">
             <img
               alt="<%= article.name %>"
               class="h-48 w-full object-cover"
@@ -44,7 +44,7 @@
         <div class="space-y-2">
           <h2 class="text-xl font-semibold">
             <a
-              href="/post/<%= article._id %>"
+              href="/post/<%= article.slug %>"
               class="transition-colors duration-200 hover:text-blue-500"
             >
               <%= article.name %>
